<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Atryl</string>
    
    <string name="string_topStories">Relevant histories</string>
    <string name="string_topStoriesOfNow">Relevant histories right now</string>
    
    <string name="string_errorNotValidUrl">it seems like no valid URL here</string>
    
    <string name="action_addFeed">Add feed</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About..</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_shareFeedItem">Share</string>
    <string name="action_viewOnWeb">View on web</string>
    <string name="action_help">Help</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="app_not_available">Can\'t find any app to complete the action.</string>
    
    <string name="share_app_reference">via @AtrylReader</string>
    
    <string name="listview_no_data">No data!</string>
    
    <string name="feed_url">Feed URL</string>
    <string name="button_search">Search</string>
    <string name="hint_feed_title">Feed title</string>
    <string name="hint_feed_description">Feed description</string>
    <string name="hint_new_category">New category</string>
    <string name="hint_category_name">Category name</string>
    <string name="check_delete_feed">Delete feed</string>
    
    <string name="dialog_add_feed">Add new feed</string>
    <string name="dialog_edit_feed">Edit feed</string>
    <string name="dialog_edit_category">Edit category</string>
    
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete_feed">Delete feed</string>
    
    <string name="toast_feed_loaded">Loaded</string>
    <string name="toast_error_loading_feed">Error loading feed</string>
    
    <string name="string_new_category">New category</string>
    
    <string name="string_welcome">Welcome to Atryl!\nLine 2</string>
    
    <string name="string_help">Atryl is an open source feeds reader.\nYou can subscribe add a RSS feed displaying the left side panel and clicking on the Add feed option in the top menu bar.</string>
    
    <string name="string_test_text">test text</string>
    
    <string name="press_once_again_to_exit">Press once again to exit</string>

</resources>
