<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editxDialogEditFeed_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_feed_title" />
    
    <EditText
        android:id="@+id/editxDialogEditFeed_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_feed_description" />

    <CheckBox
        android:id="@+id/checkboxDialogEditFeed_DeleteFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_delete_feed" />

</LinearLayout>
